新增第一次周赛题目，调整部分题目顺序，完善数组字符串知识

--- a/assets/auto_title_number.css
+++ b/assets/auto_title_number.css
@@ -13,8 +13,7 @@ h4 {
 h5 {
   counter-reset: h6cnt;
 }
-h6 {
-}
+/* h6 {} */
 h2:before {
   counter-increment: h2cnt;
   content: counter(h2cnt) ". ";
